# PhD

./: .gitignore  ARCHITECTURE.md  CI_TEST.md  README.md  algorithms.tex  config.yaml  config_example.yaml  main.py  motzkin_paper.fdb_latexmk  motzkin_paper.fls  motzkin_paper.out  motzkin_paper.tex  paper.tex  pyproject.toml  requirements.txt  setup.cfg
.copilot/: config.json
.github/workflows/: ci.yml
0_INTRODUCTION/src/: __init__.py  decoder.py  operations.py  search.py
0_INTRODUCTION/src/modes/: auto.py
0_INTRODUCTION/tests/: conftest.py  test_auto_mode.py  test_decoder_and_permutations.py  test_neighborhoods.py  test_permutations.py
1_WRONG_IMPLEMENTATION/src/: main.py  neighborhood.py  visualization.py
1_WRONG_IMPLEMENTATION/src/modes/: benchmark.py  common.py
_minted/: 0B0C001A1DC6C17EE2F1202B78D22D37.highlight.minted  10D09E04E8D16001DABCACC2B40662EB.highlight.minted  704DF4173B54358988DDEFD15E469DBC.highlight.minted  799BCF5ADDCA8DE93A7A927D2C55FB85.highlight.minted  E552121D7BD35FFA8306B7B017BF000F.highlight.minted  E61DAE49976284EF601B6C738BC5AF90.highlight.minted  _4466D786A6B947407F4EBC80F52EFE96.index.minted
artykuly/: 12054_copyright.fdb_latexmk  12054_copyright.fls  12054_copyright.tex  TODO_fibonaci_corrections.md  fibonaci.aux  fibonaci.fdb_latexmk  fibonaci.fls  fibonaci.out  fibonaci.tex  motzkin_2.blg  motzkin_2.fdb_latexmk  motzkin_2.tex  motzkin_paper.aux  motzkin_paper_pl.aux  motzkin_paper_pl.fdb_latexmk  motzkin_paper_pl.fls  motzkin_paper_pl.out  motzkin_paper_pl.tex  motzkin_pl_ok.tex  mybibliography.bib  mybibliography_compat.bib  references.bib
charts_cfg/traces/: trace_sa_run0_ta01_20250907_195523.txt  trace_sa_run0_ta01_20250907_195939.txt  trace_sa_run0_ta80_20250907_235242.txt  trace_tabu_run0_ta01_20250907_201010.txt  trace_tabu_run0_ta01_20250907_203557.txt
docs/: search_line_by_line.md
figures/paper/20251206_181012/: manifest.txt
paper/1_Fibonaci/ICAISC_2026_Hybrid_Neighborhood_Evaluation_in_Tabu_Search______Fibonacci__LNCS_12_pages/: paper.tex  references.bib
paper/2_ksiazka_rozdzial_2/Monografia_EXIT_2025/: _chapter03_not_included.tex  _chapter09.tex_not_included  acknow.tex  appendix.tex  chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.tex  chapter06.tex  chapter07.tex  chapter08.tex  chapter09.tex  chapter10.tex  chapter11.tex  chapter12.tex  chapter13.tex  chapter14.tex  chapter15.tex  chapter16.tex  chapter17.tex  chapter18.tex  chapter19.tex  chapter20.tex  chapter21.tex  chapter22.tex  foreword.tex  main.tex  preface.tex
paper/3_Motzkin/Motzkin_Neighborhood_Evaluation_in_Iterated_Local_Search_and_Simulated_Annealing_for_the_Permutational_Flow_Shop_Problem/: mybibliography.bib  paper.tex
paper/4_quantum/Quantum_Remigiusz_Wojewódzki/: bpasts.sty  paper.aux  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  sampleBibFile.bib
research/ta01/hill/: results_hill_20250824_131343.json
research/ta01/sa/: results_sa_20250824_131344.json
research/ta01/tabu/: results_tabu_20250824_131344.json
research/ta02/hill/: results_hill_20250824_131346.json
research/ta02/sa/: results_sa_20250824_131347.json
research/ta02/tabu/: results_tabu_20250824_131347.json
research/ta03/hill/: results_hill_20250824_131349.json
research/ta03/sa/: results_sa_20250824_131350.json
research/ta03/tabu/: results_tabu_20250824_131350.json
research/ta04/hill/: results_hill_20250824_131353.json
research/ta04/sa/: results_sa_20250824_131354.json
research/ta04/tabu/: results_tabu_20250824_131354.json
research/ta05/hill/: results_hill_20250824_131355.json
research/ta05/sa/: results_sa_20250824_131357.json
research/ta05/tabu/: results_tabu_20250824_131356.json
research/ta06/hill/: results_hill_20250824_131358.json
research/ta06/sa/: results_sa_20250824_131400.json
research/ta06/tabu/: results_tabu_20250824_131359.json
scripts/: aggregate_avg_tables.py  check_all.sh  convert_tex_table_to_csv.py  generate_all_pivot_tables.py  generate_motzkin_tables.py  generate_paper_figures.py
src/: __init__.py  common.py  decoder.py  dynasearch.py  evaluation.py  main.py  models.py  motzkin.py  neighborhood.py  neighbors.py  operations.py  parser.py  permutation_procesing.py  quantum_neighbors.py  search.py  search_old.py  serach.py  taillard_gen.py  visualization.py
src/algorithms/: __init__.py  base.py  ils.py  sa.py
src/experiments/: __init__.py  aggregate.py  latex_export.py  runner.py
src/modes/: auto.py  benchmark.py  common.py
src/neighborhoods/: __init__.py  adjacent.py  boundaries.py  common.py  dynasearch.py  fibonahi.py  motzkin.py  quantum_adjacent.py  quantum_dynasearch.py  quantum_fibonahi.py  quantum_motzkin.py
tables/: all_results_avg_pivot_tl100.tex  all_results_avg_pivot_tl1000.tex  all_results_avg_pivot_tl10000.tex  all_results_avg_pivot_tl2000.tex  all_results_avg_pivot_tl500.tex  all_results_avg_pivot_tl5000.tex
tests/: conftest.py  test_auto_mode.py  test_decoder_and_permutations.py  test_generate_paper_figures_smoke.py  test_neighborhoods.py  test_parser.py  test_search.py
tests/fixtures/: ta01
tex/: algorithms.tex  paper.tex
tools/: pdf_flowshop_extract.py
(+194 files in other folders)
