[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-jssp"
version = "0.0.0"
description = "Minimal scaffold for Job Shop Scheduling Problem experiments."
authors = [{ name = "Remigiusz Wojewódzki" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
# -ra: show brief summary of skipped/xfailed/xpassed/failed
# -vv: verbose test names
# --durations=5: list 5 slowest tests
# --durations-min=0.05: only show if >= 50 ms
# --color=yes: force colored output
addopts = "-ra -vv --durations=5 --durations-min=0.05 --color=yes"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"I",   # isort
	"B",   # flake8-bugbear
	"UP",  # pyupgrade
	"ANN"  # flake8-annotations (enforce type hints)
]
ignore = [
	"ANN101", # missing self type annotation (can relax later)
	"ANN102"  # missing cls annotation
]

[tool.ruff.lint.isort]
known-first-party = ["jssp"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["jssp"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = [".venv"]
