[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-jssp"
version = "0.0.0"
description = "Minimal scaffold for Job Shop Scheduling Problem experiments."
authors = [{ name = "Remigiusz Wojewódzki" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	# optional core runtime libs kept minimal; matplotlib only if visualization used
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.9.0"]
dev = [
	"pytest>=7.4",
	"ruff>=0.4.0",
	"black>=24.3.0",
	"mypy>=1.8.0",
	"flake8>=7.0.0",
	"isort>=5.13.0",
]

[tool.pytest.ini_options]
# -ra: show brief summary of skipped/xfailed/xpassed/failed
# -vv: verbose test names
# --durations=5: list 5 slowest tests
# --durations-min=0.05: only show if >= 50 ms
# --color=yes: force colored output
addopts = "-ra -vv --durations=5 --durations-min=0.05 --color=yes"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"I",   # isort
	"B",   # flake8-bugbear
	"UP",  # pyupgrade
	"ANN"  # annotations
]
ignore = [
	"ANN101",
	"ANN102",
	"E501",      # let Black manage line length (100)
]

[tool.ruff.lint.isort]
known-first-party = ["jssp"]
combine-as-imports = true

[tool.black]
line-length = 100  # keep 100-char line length
target-version = ["py311"]
preview = true     # enable latest (stricter) formatting rules
# Black has no separate 'strict' flag; 'preview' activates the most recent
# (potentially more opinionated) transformations.

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["jssp"]
skip = [".venv", ".venv311", "build", "dist", "data", "research"]
src_paths = ["src", "tests"]

[tool.flake8]
# Align flake8 with Black/Ruff configuration
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = [".venv"]
